Refactor: implement orchestrator pattern and stateless ping-worker